[package]
name = "rust-gateway"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version="1.28", features = ["full"]}
tungstenite = "0.19"
tokio-tungstenite = "0.19"
futures-util = "0.3"
futures-channel = "0.3"
log = "0.4"
env_logger = "0.10"
serde =  {version = "1.0", features = ["derive"]}
serde_yaml = "0.9"
serde_json = "1.0.96"
tonic= "0.9"
prost="0.11"
anyhow = "1.0.71"
thiserror = "1.0.40"

[build-dependencies]
tonic-build = {version = "0.9",  features = ["prost"] }